# fleet.management/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/FleetController.java
@@ -1,0 +1,14 @@
+package ro.agilehub.javacourse.car.hire.user.controller;
+
+
+//@RestController
+//public class FleetController implements FleetApi {
+
+
+//    public ResponseEntity<List<UserDTO>> getUsers() {
+//        UserDTO userDTO = new UserDTO();
+//        userDTO.setId(1);
+//        userDTO.setUsername("My first sample");
+//        return ResponseEntity.ok(Collections.singletonList(userDTO));
+//    }
+//}
