# rental/src/main/java/ro/agilehub/javacourse/car/hire/user/controller/RentalController.java
@@ -1,0 +1,14 @@
+package ro.agilehub.javacourse.car.hire.user.controller;
+
+
+//@RestController
+//public class RentalController implements RentalApi {
+
+
+//    public ResponseEntity<List<UserDTO>> getUsers() {
+//        UserDTO userDTO = new UserDTO();
+//        userDTO.setId(1);
+//        userDTO.setUsername("My first sample");
+//        return ResponseEntity.ok(Collections.singletonList(userDTO));
+//    }
+//}
